finished part a sec 1

--- a/CMPS360-S25-ProjPartA/project.ipynb
+++ b/CMPS360-S25-ProjPartA/project.ipynb
@@ -16947,7 +16947,7 @@
    "id": "393bb8fe",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "I don't think it's sampled randomly. If it was sampled randomly we should see that the sampled cities (blue pins) spread out uniformly across the US. However, in this case, it is clearly observed that more of the sampled cities are clustered in the East Coast. Futhermore, it also clear that the majority of sampled cities are urban cities and few are rural."
    ]
   },
   {
@@ -17302,40 +17302,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 211,
    "id": "8f90eb9c",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "column functions must be callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[141], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m regions_focus \u001b[38;5;241m=\u001b[39m cities\u001b[38;5;241m.\u001b[39mgroup(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRegion\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m regions_focus\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\datascience\\tables.py:1556\u001b[0m, in \u001b[0;36mTable.group\u001b[1;34m(self, column_or_label, collect)\u001b[0m\n\u001b[0;32m   1553\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgroups(column_or_label, collect)\n\u001b[0;32m   1555\u001b[0m \u001b[38;5;28mself\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcopy(shallow\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m-> 1556\u001b[0m collect \u001b[38;5;241m=\u001b[39m _zero_on_type_error(collect)\n\u001b[0;32m   1558\u001b[0m \u001b[38;5;66;03m# Remove column used for grouping\u001b[39;00m\n\u001b[0;32m   1559\u001b[0m column \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_column(column_or_label)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\datascience\\tables.py:5828\u001b[0m, in \u001b[0;36m_zero_on_type_error\u001b[1;34m(column_fn)\u001b[0m\n\u001b[0;32m   5826\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m column_fn\n\u001b[0;32m   5827\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mcallable\u001b[39m(column_fn):\n\u001b[1;32m-> 5828\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolumn functions must be callable\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m   5829\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(column_fn)\n\u001b[0;32m   5830\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(column):\n\u001b[0;32m   5831\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "\u001b[1;31mTypeError\u001b[0m: column functions must be callable"
-     ]
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Region</th> <th>Name first</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Northeast</td> <td>Moline       </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Northwest</td> <td>McCook       </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Southeast</td> <td>WestPalmBeach</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Southwest</td> <td>Denver       </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Region    | Name first\n",
+       "Northeast | Moline\n",
+       "Northwest | McCook\n",
+       "Southeast | WestPalmBeach\n",
+       "Southwest | Denver"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "regions_focus = cities.group('Region', 'Name')\n",
+    "def first(s):\n",
+    "    return s.item(0)\n",
+    "    \n",
+    "regions_focus = cities.group(['Region', 'Name']).sort(\"count\", descending=True).group('Region', first).drop(2)\n",
     "regions_focus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "id": "b8daa022",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q1_1_7</pre></strong> passed! 🙌</p>"
+      ],
+      "text/plain": [
+       "q1_1_7 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q1_1_7\")"
    ]
