--- a/CMPS360-S25-ProjPartA/project.ipynb
+++ b/CMPS360-S25-ProjPartA/project.ipynb
@@ -17923,17 +17923,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 532,
    "id": "ffbaa448",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-04-01T19:48:27.008855Z",
-     "iopub.status.busy": "2022-04-01T19:48:27.008626Z",
-     "iopub.status.idle": "2022-04-01T19:48:27.613516Z",
-     "shell.execute_reply": "2022-04-01T19:48:27.612533Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85"
+      ]
+     },
+     "execution_count": 532,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Just run this cell\n",
     "feb_present = phoenix.where('Year', are.between_or_equal_to(2019, 2021)).where('Month', '02 (Feb)')\n",
@@ -17950,17 +17954,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 535,
    "id": "a25e4179",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-04-01T19:48:27.618250Z",
-     "iopub.status.busy": "2022-04-01T19:48:27.617339Z",
-     "iopub.status.idle": "2022-04-01T19:48:27.622910Z",
-     "shell.execute_reply": "2022-04-01T19:48:27.622002Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "February Difference: 0.3373623297258632\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Just run this cell\n",
     "print(f\"February Difference: {monthly_increases.row(1).item('Increase')}\")"
