--- a/CMPS360-S25-ProjectPartB/preprocessing.ipynb
+++ b/CMPS360-S25-ProjectPartB/preprocessing.ipynb
@@ -59,6 +59,129 @@
     "            writer.writerow(item.values())\n",
     "    print(\"CSV file created successfully.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV file 'infrastructure-damaged_fixed.csv' created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import json\n",
+    "\n",
+    "input_csv_file = \"infrastructure-damaged.csv\"\n",
+    "output_csv_file = \"infrastructure-damaged_fixed.csv\"\n",
+    "\n",
+    "def fix_data(input_file, output_file):\n",
+    "    with open(\"infrastructure-damaged_2025-04-12.json\", \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    all_keys = {\n",
+    "        \"report_date\",\n",
+    "        \"civic_buildings\",\n",
+    "        \"educational_buildings\",\n",
+    "        \"places_of_worship\",\n",
+    "        \"residential\",\n",
+    "    }\n",
+    "\n",
+    "    civic_keys = {\"destroyed\", \"ext_destroyed\"}\n",
+    "    educational_keys = {\"destroyed\", \"ext_destroyed\", \"damaged\", \"ext_damaged\"}\n",
+    "    worship_keys = {\n",
+    "        \"mosques_destroyed\",\n",
+    "        \"ext_mosques_destroyed\",\n",
+    "        \"mosques_damaged\",\n",
+    "        \"ext_mosques_damaged\",\n",
+    "        \"churches_destroyed\",\n",
+    "        \"ext_churches_destroyed\",\n",
+    "    }\n",
+    "    residential_keys = {\"destroyed\", \"ext_destroyed\", \"damaged\", \"ext_damaged\"}\n",
+    "\n",
+    "    with open(output_file, \"w\", newline=\"\") as f:\n",
+    "        writer = csv.writer(f)\n",
+    "\n",
+    "        header = [\n",
+    "            \"report_date\",\n",
+    "            \"civic_destroyed\",\n",
+    "            \"civic_ext_destroyed\",\n",
+    "            \"edu_destroyed\",\n",
+    "            \"edu_ext_destroyed\",\n",
+    "            \"edu_damaged\",\n",
+    "            \"edu_ext_damaged\",\n",
+    "            \"worship_mosques_destroyed\",\n",
+    "            \"worship_ext_mosques_destroyed\",\n",
+    "            \"worship_mosques_damaged\",\n",
+    "            \"worship_ext_mosques_damaged\",\n",
+    "            \"worship_churches_destroyed\",\n",
+    "            \"worship_ext_churches_destroyed\",\n",
+    "            \"residential_destroyed\",\n",
+    "            \"residential_ext_destroyed\",\n",
+    "            \"residential_damaged\",\n",
+    "            \"residential_ext_damaged\",\n",
+    "        ]\n",
+    "        writer.writerow(header)\n",
+    "\n",
+    "        # Process each item in the JSON data\n",
+    "        for item in data:\n",
+    "            report_date = item.get(\"report_date\", \"\")\n",
+    "\n",
+    "            civic = item.get(\"civic_buildings\", {})\n",
+    "            civic_destroyed = civic.get(\"destroyed\", 0)\n",
+    "            civic_ext_destroyed = civic.get(\"ext_destroyed\", 0)\n",
+    "\n",
+    "            edu = item.get(\"educational_buildings\", {})\n",
+    "            edu_destroyed = edu.get(\"destroyed\", 0)\n",
+    "            edu_ext_destroyed = edu.get(\"ext_destroyed\", 0)\n",
+    "            edu_damaged = edu.get(\"damaged\", 0)\n",
+    "            edu_ext_damaged = edu.get(\"ext_damaged\", 0)\n",
+    "\n",
+    "            worship = item.get(\"places_of_worship\", {})\n",
+    "            worship_mosques_destroyed = worship.get(\"mosques_destroyed\", 0)\n",
+    "            worship_ext_mosques_destroyed = worship.get(\"ext_mosques_destroyed\", 0)\n",
+    "            worship_mosques_damaged = worship.get(\"mosques_damaged\", 0)\n",
+    "            worship_ext_mosques_damaged = worship.get(\"ext_mosques_damaged\", 0)\n",
+    "            worship_churches_destroyed = worship.get(\"churches_destroyed\", 0)\n",
+    "            worship_ext_churches_destroyed = worship.get(\"ext_churches_destroyed\", 0)\n",
+    "\n",
+    "            residential = item.get(\"residential\", {})\n",
+    "            residential_destroyed = residential.get(\"destroyed\", 0)\n",
+    "            residential_ext_destroyed = residential.get(\"ext_destroyed\", 0)\n",
+    "            residential_damaged = residential.get(\"damaged\", 0)\n",
+    "            residential_ext_damaged = residential.get(\"ext_damaged\", 0)\n",
+    "\n",
+    "            row = [\n",
+    "                report_date,\n",
+    "                civic_destroyed,\n",
+    "                civic_ext_destroyed,\n",
+    "                edu_destroyed,\n",
+    "                edu_ext_destroyed,\n",
+    "                edu_damaged,\n",
+    "                edu_ext_damaged,\n",
+    "                worship_mosques_destroyed,\n",
+    "                worship_ext_mosques_destroyed,\n",
+    "                worship_mosques_damaged,\n",
+    "                worship_ext_mosques_damaged,\n",
+    "                worship_churches_destroyed,\n",
+    "                worship_ext_churches_destroyed,\n",
+    "                residential_destroyed,\n",
+    "                residential_ext_destroyed,\n",
+    "                residential_damaged,\n",
+    "                residential_ext_damaged,\n",
+    "            ]\n",
+    "            writer.writerow(row)\n",
+    "\n",
+    "    print(f\"CSV file '{output_file}' created successfully.\")\n",
+    "\n",
+    "\n",
+    "fix_data(input_csv_file, output_csv_file)"
+   ]
   }
  ],
  "metadata": {
