--- a/CMPS360-S25-ProjectPartB/Part B.ipynb
+++ b/CMPS360-S25-ProjectPartB/Part B.ipynb
@@ -1,22 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Genocide in Gaza: Telling the Story through Data Science!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell to set up the notebook.\n",
+    "from datascience import *\n",
+    "import numpy as np\n",
+    "\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "np.set_printoptions(legacy='1.13')\n",
+    "\n",
+    "import warnings\n",
+    "warnings.simplefilter('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Preprocessing \n",
+    "\n",
+    "### 1.A Converting the PDF list in the \"killed-in-gaza_moh_2024-09-21.pdf\" file to CSV."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'PDFStackT' from 'pdfminer.pdfinterp' (/Users/zubair/Code/uni/data-science-project/.venv/lib/python3.12/site-packages/pdfminer/pdfinterp.py)",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pdfplumber'",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpdfplumber\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcsv\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m pdfplumber.open(\u001b[33m\"\u001b[39m\u001b[33mkilled-in-gaza_moh_2025-03-23.pdf\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m pdf:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/uni/data-science-project/.venv/lib/python3.12/site-packages/pdfplumber/__init__.py:15\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m utils\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_version\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m __version__\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpdf\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PDF\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mrepair\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m repair\n\u001b[32m     18\u001b[39m \u001b[38;5;28mopen\u001b[39m = PDF.open\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/uni/data-science-project/.venv/lib/python3.12/site-packages/pdfplumber/pdf.py:16\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_typing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m T_num, T_obj_list\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcontainer\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Container\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpage\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Page\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mrepair\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m T_repair_setting, _repair\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstructure\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PDFStructTree, StructTreeMissing\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/uni/data-science-project/.venv/lib/python3.12/site-packages/pdfplumber/page.py:29\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpdfminer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconverter\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PDFPageAggregator\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpdfminer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlayout\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     21\u001b[39m     LTChar,\n\u001b[32m     22\u001b[39m     LTComponent,\n\u001b[32m   (...)\u001b[39m\u001b[32m     27\u001b[39m     LTTextContainer,\n\u001b[32m     28\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpdfminer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpdfinterp\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PDFPageInterpreter, PDFStackT\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpdfminer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpdfpage\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PDFPage\n\u001b[32m     31\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpdfminer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpsparser\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PSLiteral\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'PDFStackT' from 'pdfminer.pdfinterp' (/Users/zubair/Code/uni/data-science-project/.venv/lib/python3.12/site-packages/pdfminer/pdfinterp.py)"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpdfplumber\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcsv\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m pdfplumber\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkilled-in-gaza_moh_2025-03-23.pdf\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m pdf:\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pdfplumber'"
      ]
     }
    ],
@@ -35,8 +67,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.B Converting the JSON list in the \"infrastructure-damaged.json\" file to CSV."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -182,13 +221,67 @@
     "\n",
     "fix_data(input_csv_file, output_csv_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>civic_destroyed</th> <th>civic_ext_destroyed</th> <th>edu_destroyed</th> <th>edu_ext_destroyed</th> <th>edu_damaged</th> <th>edu_ext_damaged</th> <th>worship_mosques_destroyed</th> <th>worship_ext_mosques_destroyed</th> <th>worship_mosques_damaged</th> <th>worship_ext_mosques_damaged</th> <th>worship_churches_destroyed</th> <th>worship_ext_churches_destroyed</th> <th>residential_destroyed</th> <th>residential_ext_destroyed</th> <th>residential_damaged</th> <th>residential_ext_damaged</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>0              </td> <td>5                  </td> <td>0            </td> <td>1                </td> <td>0          </td> <td>15             </td> <td>0                        </td> <td>2                            </td> <td>0                      </td> <td>4                          </td> <td>0                         </td> <td>0                             </td> <td>0                    </td> <td>80                       </td> <td>0                  </td> <td>0                      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0              </td> <td>11                 </td> <td>0            </td> <td>1                </td> <td>0          </td> <td>30             </td> <td>0                        </td> <td>4                            </td> <td>0                      </td> <td>8                          </td> <td>0                         </td> <td>0                             </td> <td>159                  </td> <td>159                      </td> <td>0                  </td> <td>0                      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0              </td> <td>16                 </td> <td>0            </td> <td>2                </td> <td>0          </td> <td>45             </td> <td>0                        </td> <td>6                            </td> <td>0                      </td> <td>12                         </td> <td>0                         </td> <td>0                             </td> <td>790                  </td> <td>790                      </td> <td>0                  </td> <td>0                      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>0              </td> <td>22                 </td> <td>0            </td> <td>2                </td> <td>0          </td> <td>60             </td> <td>0                        </td> <td>8                            </td> <td>0                      </td> <td>17                         </td> <td>0                         </td> <td>0                             </td> <td>1009                 </td> <td>1009                     </td> <td>0                  </td> <td>0                      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>27             </td> <td>27                 </td> <td>3            </td> <td>3                </td> <td>75         </td> <td>75             </td> <td>10                       </td> <td>10                           </td> <td>0                      </td> <td>21                         </td> <td>0                         </td> <td>0                             </td> <td>2835                 </td> <td>2835                     </td> <td>0                  </td> <td>0                      </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (529 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "infrastructure = Table.read_table('infrastructure-damaged_fixed.csv', index_col=0)\n",
+    "infrastructure.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,5 +297,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
