--- a/CMPS360-S25-ProjectPartB/Part B.ipynb
+++ b/CMPS360-S25-ProjectPartB/Part B.ipynb
@@ -2065,8 +2065,8 @@
     "        return get_display(text);\n",
     "    return text\n",
     "\n",
-    "with pdfplumber.open(\"killed-in-gaza_moh_2025-03-23.pdf\") as pdf:\n",
-    "    with open(\"killed-in-gaza_moh_2025-03-23.csv\", \"w\", newline=\"\", encoding='utf-8-sig') as f:\n",
+    "with pdfplumber.open(base_dataset_dir+\"killed-in-gaza_moh_2025-03-23.pdf\") as pdf:\n",
+    "    with open(base_dataset_dir+\"killed-in-gaza_moh_2025-03-23.csv\", \"w\", newline=\"\", encoding='utf-8-sig') as f:\n",
     "        writer = csv.writer(f)\n",
     "        for page in pdf.pages:\n",
     "            table = page.extract_table()\n",
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2164,14 +2164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV file 'infrastructure-damaged_fixed.csv' created successfully.\n"
+      "CSV file 'datasets/infrastructure-damaged_fixed.csv' created successfully.\n"
      ]
     }
    ],
@@ -2287,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
