--- a/CMPS360-S25-ProjectPartB/Part B-Copy1.ipynb
+++ b/CMPS360-S25-ProjectPartB/Part B-Copy1.ipynb
@@ -2439,7 +2439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Timeline comparing data from flash and UN verified reports on cumulative number of killed individuals in West Bank"
+    "# A Timeline comparing data from flash and UN verified reports on cumulative numbers in West Bank"
    ]
   },
   {
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -2513,20 +2513,20 @@
        "'2024-11-13'"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Last verified report\n",
+    "# Last verified report for killed individuals\n",
     "no_nan_westbank_casualties = westbank_casualties.where(~np.isnan(westbank_casualties.column(\"verified.killed_cum\")))\n",
     "no_nan_westbank_casualties.take(no_nan_westbank_casualties.num_rows-1).row(0).item(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -2535,13 +2535,13 @@
        "'2025-04-09'"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Last flash update report\n",
+    "# Last flash update report for killed individuals\n",
     "westbank_casualties.take(westbank_casualties.num_rows-1).row(0).item(0)"
    ]
   },
@@ -2552,9 +2552,10 @@
     "### Insights gained from the two line graphs\n",
     "* The verified line (blue line) and flash reports line (red line) are overlapping most of the time throughout the graph. This shows high reliability of flash reports, even before verification. With the flash report line being able to closely track with the verification line allows policy-makers, analysts, or journalist to reasonably and confidently rely on flash reports data without final verification from the UN and perform the necessasry humanitarian aid or political response to the West Bank immediately. Furthermore, having these two lines graph being close to each other shows that there are little bias or exaggeration from the flash reports clearly presenting the evidence of the violence and injustice the Israel army are committing.\n",
     "\n",
-    "* We can't really tell how fast the verification process is. However, it seems like from the graph the last verification from the UN and the latest flash report are far apart. The last verification was reported on **2024-11-13** meaning that the verified reports are lagging almost 5 months behind with the latest flash update reported at **2025-04-09**. Because we do not have data in regards to the delay of the verification report with respect to the flash report. We can assume two scenarios:\n",
+    "* We can't really tell how fast the verification process is. However, it seems like from the graph, the last verification from the UN and the latest flash report are far apart. The last verification was reported on **2024-11-13** meaning that the verified reports are lagging almost 5 months behind with the latest flash update reported at **2025-04-09**. Because we do not have data in regards to the delay of the verification report with respect to the flash report. We can assume three scenarios:\n",
     "   1. That this is indeed a slow and thorough verification process probably to ensure accurate verified data are given out before being publicized.\n",
-    "   2. Due to increasing violence by Israel, the UN field staff are restricted to enter certain refugee camps and towns that are in conflict zones **OR** as violence continues which results in a chaotic and hectic environment, the field staff may feel overwhelmed and some may get caught in the crossfire reducing the number of staff to create reports."
+    "   2. Due to increasing violence by Israel, the UN field staff are restricted to enter certain refugee camps and towns that are in conflict zones **OR** as violence continues which results in a chaotic and hectic environment, the field staff may feel overwhelmed and some may get caught in the crossfire reducing the number of staff to create reports.\n",
+    "   3. A ceasfire or the situation has de-escalated around the 400th day mark resulting in less reports from the UN being published."
    ]
   },
   {
