--- a/CMPS360-S25-ProjectPartB/Part B-Copy1.ipynb
+++ b/CMPS360-S25-ProjectPartB/Part B-Copy1.ipynb
@@ -2592,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 663,
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2654,7 @@
        "... (541 rows omitted)"
       ]
      },
-     "execution_count": 643,
+     "execution_count": 663,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2666,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 665,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2682,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 647,
+   "execution_count": 667,
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
        "... (541 rows omitted)"
       ]
      },
-     "execution_count": 647,
+     "execution_count": 667,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2758,7 +2758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 669,
    "metadata": {},
    "outputs": [
     {
@@ -2779,7 +2779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 671,
    "metadata": {},
    "outputs": [
     {
@@ -2803,7 +2803,7 @@
        "0             | 0            | -32"
       ]
      },
-     "execution_count": 651,
+     "execution_count": 671,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2815,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 673,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2825,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 675,
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [
     {
@@ -2855,73 +2855,73 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>Daily Injured</th> <th>Daily killed</th> <th>Daily Settler Attacks</th> <th>Is Settler Attack Day</th>\n",
+       "            <th>Daily Injured</th> <th>Daily killed</th> <th>Daily Settler Attacks</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>23           </td> <td>3           </td> <td>3                    </td> <td>False                </td>\n",
+       "            <td>3            </td> <td>0           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>171          </td> <td>10          </td> <td>6                    </td> <td>False                </td>\n",
+       "            <td>54           </td> <td>5           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>101          </td> <td>2           </td> <td>10                   </td> <td>False                </td>\n",
+       "            <td>7            </td> <td>4           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>37           </td> <td>4           </td> <td>10                   </td> <td>False                </td>\n",
+       "            <td>0            </td> <td>1           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>95           </td> <td>7           </td> <td>10                   </td> <td>False                </td>\n",
+       "            <td>11           </td> <td>2           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>73           </td> <td>7           </td> <td>10                   </td> <td>False                </td>\n",
+       "            <td>0            </td> <td>2           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>200          </td> <td>10          </td> <td>14                   </td> <td>False                </td>\n",
+       "            <td>8            </td> <td>1           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>450          </td> <td>11          </td> <td>4                    </td> <td>False                </td>\n",
+       "            <td>16           </td> <td>4           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>23           </td> <td>7           </td> <td>3                    </td> <td>False                </td>\n",
+       "            <td>0            </td> <td>0           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>3            </td> <td>0           </td> <td>0                    </td> <td>True                 </td>\n",
+       "            <td>41           </td> <td>0           </td> <td>0                    </td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>\n",
-       "<p>... (540 rows omitted)</p>"
+       "<p>... (363 rows omitted)</p>"
       ],
       "text/plain": [
-       "Daily Injured | Daily killed | Daily Settler Attacks | Is Settler Attack Day\n",
-       "23            | 3            | 3                     | False\n",
-       "171           | 10           | 6                     | False\n",
-       "101           | 2            | 10                    | False\n",
-       "37            | 4            | 10                    | False\n",
-       "95            | 7            | 10                    | False\n",
-       "73            | 7            | 10                    | False\n",
-       "200           | 10           | 14                    | False\n",
-       "450           | 11           | 4                     | False\n",
-       "23            | 7            | 3                     | False\n",
-       "3             | 0            | 0                     | True\n",
-       "... (540 rows omitted)"
+       "Daily Injured | Daily killed | Daily Settler Attacks\n",
+       "3             | 0            | 0\n",
+       "54            | 5            | 0\n",
+       "7             | 4            | 0\n",
+       "0             | 1            | 0\n",
+       "11            | 2            | 0\n",
+       "0             | 2            | 0\n",
+       "8             | 1            | 0\n",
+       "16            | 4            | 0\n",
+       "0             | 0            | 0\n",
+       "41            | 0            | 0\n",
+       "... (363 rows omitted)"
       ]
      },
-     "execution_count": 659,
+     "execution_count": 677,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lets delve more to see if we can see a much clearer difference between days without settler attacks and vice-versa\n",
-    "wb_set_att = wb_set_att.with_column(\"Is Settler Attack Day\", wb_set_att.column(\"Daily Settler Attacks\") == 0)\n",
-    "wb_set_att"
+    "wb_no_set_att = wb_set_att.where(\"Daily Settler Attacks\", 0)\n",
+    "wb_no_set_att"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2983,7 @@
        "... (167 rows omitted)"
       ]
      },
-     "execution_count": 619,
+     "execution_count": 679,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2995,7 +2995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [
     {
@@ -3004,7 +3004,7 @@
        "(337, 147, 7276, 750)"
       ]
      },
-     "execution_count": 621,
+     "execution_count": 681,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3021,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
@@ -3049,7 +3049,7 @@
        "Yes            | 7276          | 750"
       ]
      },
-     "execution_count": 623,
+     "execution_count": 683,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3064,7 +3064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
